Bug 71656 - [SNB regression] CPU is running hot with kernel 3.12.0
Summary: [SNB regression] CPU is running hot with kernel 3.12.0
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Daniel Vetter
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-15 18:19 UTC by erik
Modified: 2017-07-24 22:56 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Turbostat output, System is idle in the last two stats (5.15 KB, text/plain)
2013-11-15 18:19 UTC, erik
no flags Details

Description erik 2013-11-15 18:19:46 UTC
Created attachment 89278 [details]
Turbostat output, System is idle in the last two stats

Hi,

With kernel 3.12 my Sandybridge Laptop (Lenovo T420) gets easily heated up.
As soon as I start openarena the CPU reaches ~96°C and stays there. It won't cool down, even when idle. The only way to cool the system down is a reboot or suspend to ram.

A bisect between Linux 3.11 and 3.12 identified 351aa5666d02062b52329bcfe4bcf9d1f882fba9 (drm/i915: tune the RC6 threshold for stability) as bad commit. Indeed reverting this commit on 3.12 fixes the problem.

I have attached the turbostat output.

The CPU is Intel(R) Core(TM) i5-2520M CPU @ 2.50GHz.
Graphic is
00:02.0 VGA compatible controller: Intel Corporation 2nd Generation Core Processor Family Integrated Graphics Controller (rev 09)
Comment 1 Daniel Vetter 2013-11-16 12:17:59 UTC
Thanks for the bisect. I'll queue up the revert if no one has a better idea in the next few days.
Comment 2 Daniel Vetter 2013-11-16 15:07:07 UTC
I've pushed the revert to -fixes. Might be we need your machine to test a few things. I've cc'ed you on the patch so you're on the discussion.
Comment 3 erik 2013-11-16 15:24:18 UTC
Sure, thanks for handling this.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.